# mtuci-antiplagiarism

./: .gitignore  Antiplagiarism.spec  README.md  gui_entry.py  pyproject.toml
.github/workflows/: windows.yml
data/quick-test/: README.txt  a.txt  b.txt  c.txt
data/texts/: different_1.txt  different_2.txt  different_3.txt  partial_1.txt  partial_2.txt  partial_3.txt  similar_1.txt  similar_2.txt  similar_3.txt  similar_4.txt
scripts/: build_gui_binary.bat  build_gui_binary.sh
src/: document_io.py  gui_app.py  highlight.py  report_pdf.py  similarity.py  text_normalize.py  text_similarity_prototype.py
tests/: test_document_io.py  test_highlight_multisource.py  test_similarity_neighbors.py
